tests/snapshots/parser__for_loop__break_inside_loop.snap
---
source: tests/parser.rs
expression: "parse(\"for x in xs { break }\")"
---
Ok(
    [
        For {
            var: "x",
            iter: Identifier(
                "xs",
                Span {
                    start: 9,
                    end: 11,
                },
            ),
            body: [
                Break(
                    Span {
                        start: 14,
                        end: 19,
                    },
                ),
            ],
            span: Span {
                start: 0,
                end: 21,
            },
        },
    ],
)
