tests/snapshots/parser__for_loop__continue_inside_loop.snap
---
source: tests/parser.rs
expression: "parse(\"for x in xs { continue }\")"
---
Ok(
    [
        For {
            var: "x",
            iter: Identifier(
                "xs",
                Span {
                    start: 9,
                    end: 11,
                },
            ),
            body: [
                Continue(
                    Span {
                        start: 14,
                        end: 22,
                    },
                ),
            ],
            span: Span {
                start: 0,
                end: 24,
            },
        },
    ],
)
