tests/snapshots/parser__for_loop__empty_body.snap
---
source: tests/parser.rs
expression: "parse(\"for x in xs { }\")"
---
Ok(
    [
        For {
            var: "x",
            iter: Identifier(
                "xs",
                Span {
                    start: 9,
                    end: 11,
                },
            ),
            body: [],
            span: Span {
                start: 0,
                end: 15,
            },
        },
    ],
)
